--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/socialpoint/gatsby-source-s3-image"
+    "url": "git@github.com:socialpoint/gatsby-source-s3-image"
   },
   "scripts": {
     "build": "babel --extensions '.ts' src/ --out-dir .",
